# SQS-PD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_single_test.bat  run_tests_learning.bat  run_tests_pytest.bat
artifacts/models/default_ml_ranker/: default_model_manifest.json  per_cif_test_metrics.csv
artifacts/models/ml_ranker/: feature_importance.csv  ranker_inference_config.json  ranker_model.txt  ranker_report.json
artifacts/pipeline/: disorder_features.csv  ml_dataset.csv  sqs_all_results.csv  supercell_scaling_smoke.jsonl
data/input/: .gitkeep  demo_pd.cif  demo_sd.cif
data/output/batch_demo_pd__auto/: demo_pd__auto.cif  demo_pd__auto.json  demo_pd__auto_sqsgenerator.json
data/output/batch_demo_sd__auto/: demo_sd__auto.cif  demo_sd__auto.json  demo_sd__auto_sqsgenerator.json
data/output/single_100193__auto/: 100193__auto.cif  100193__auto.json  100193__auto_sqsgenerator.json
data/output/single_15143__model_top5_validation/: best_by_actual_objective.cif  best_by_actual_objective.json  best_by_actual_objective_sqsgenerator.json  top5_model_vs_actual.csv
docx/: API_REFERENCE.md  APPENDIX_ML_METRICS_INTERPRETATION.md  APPENDIX_PARSEERROR_DIAGNOSTICS.md  APPENDIX_SQSGENERATOR_DEBUG_PLAYBOOK.md  APPENDIX_SQSGENERATOR_DIAGNOSTICS.md  CORE_CONCEPTS.md  DEVELOPER_MAP.md  ML_GUIDE.md  PITFALLS_AND_RULES.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  WORKFLOWS.md
examples/: run_sqs_all_candidates.py  simple_usage.py  train_sqs_ranker.py
src/sqs_pd/: __init__.py
src/sqs_pd/analysis/: __init__.py  analysis_utils.py  cif_disorder_analyzer.py  (+1 more)
tests/: conftest.py  test_01_supercell_basics.py  test_02_sqsgenerator_api.py  test_03_critical_semantics.py  test_04_project_api.py  test_05_cif_disorder_analysis.py
(+32 files in other folders)
